adding copy button,  handle it's style and adding functionality

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,9 @@
     <title>Technical Documentation</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
+
 </head>
+
 <body>
     <nav id="navbar">
         <header>C# Tutorial</header>
@@ -42,7 +45,8 @@
 
         <section class="main-section" id="Syntax">
             <header>Syntax</header>
-            <p>Syntax is the structure of statements , Here is a simple program typed in C# to discuss the meaning of syntax</p>
+            <p>Syntax is the structure of statements , Here is a simple program typed in C# to discuss the meaning of
+                syntax</p>
             <pre><code>using System;
 namespace Hello
 {
@@ -59,7 +63,9 @@ namespace Hello
             Console.WriteLine("AAA");
         }
     }
-}</code></pre>
+}
+</code>
+</pre>
         </section>
 
         <section class="main-section" id="Data_Types">
@@ -115,11 +121,15 @@ Console.WriteLine("You are " + age + " years old") ;</code></pre>
 
         <section class="main-section" id="Booleans">
             <header>Booleans</header>
-            <p>Booleans are data types that can be used to control whether something is true or false(yes or no / on or off).</p>
+            <p>Booleans are data types that can be used to control whether something is true or false(yes or no / on or
+                off).</p>
             <pre><code>bool male = true ;
 bool student = true ;
 bool permission_accepted = false ;</code></pre>
         </section>
     </main>
 </body>
+<script src="https://kit.fontawesome.com/68c8a3df11.js" crossorigin="anonymous"></script>
+<script src="main.js"></script>
+
 </html>
